--- a/manajer/templates/dashboard.html
+++ b/manajer/templates/dashboard.html
@@ -77,7 +77,7 @@
     
     <h1 class="text-2xl font-semibold mb-4 text-center">Tim</h1>
     {% if tim %}
-    <h2 class="text-xl font-semibold mt-8 mb-4 text-center">{{tim}} - {{universitas}}</h2>
+    <h2 class="text-xl font-semibold mt-8 mb-4 text-center">FC {{tim}} - {{universitas}}</h2>
     {% if list_pemain %}
     <h2 class="text-xl font-semibold mt-8 mb-4 text-center">Pemain</h2>
     <table class="table-auto mx-auto w-full">
